Added Javadoc and Streamlined code.